--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "bbframework-projects"]
-	path = bbframework-projects
-	url = git@github.com:gestrich/bbframework-projects.git
+[submodule "calorie-counter"]
+	path = calorie-counter
+	url = git@github.com:gestrich/calorie-counter.git
